keycloak/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: keycloak
  namespace: ndc-prod
  labels:
    app: keycloak
spec:
  host: keycloak-ndc-prod.apps.cloudpub.istat.it
  to:
    kind: Service
    name: keycloak
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status:
  ingress: []
